Navigation toolbar: let the count/status label truncate correctly if there is a sibling present, usually a [+] button

--- a/src/scss/themes/fylr/components/_toolbar.scss
+++ b/src/scss/themes/fylr/components/_toolbar.scss
@@ -91,6 +91,12 @@
 	// left column has the status information label, it can truncate with ...
 	> .cui-horizontal-layout-left {
 		flex: 1 1 auto;
+
+		// lets the status info label truncate correctly in the case there is an optional sibling buttonbar present, usually a [+] button
+		> .cui-label {
+			flex: 1 1 auto;
+			overflow: hidden;
+		}
 	}
 	
 	.cui-buttonbar .cui-buttonbar-group-navi {
